--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "kontecho-website",
+  "name": "hydrobud-website",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://froncz.github.io/kontecho-website/",
+  "homepage": "http://froncz.github.io/hydrobud-website/",
   "dependencies": {
     "node-sass-chokidar": "^0.0.3",
     "npm-run-all": "^4.1.2",
