--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-addons-css-transition-group": "^15.6.2",
     "react-dom": "^16.2.0",
     "react-icons": "^2.2.7",
+    "react-medium-image-zoom": "^3.0.10",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.1"
   },
